/*
 * Copyright (c) 2018-2025 Red Hat, Inc.
 * This program and the accompanying materials are made
 * available under the terms of the Eclipse Public License 2.0
 * which is available at https://www.eclipse.org/legal/epl-2.0/
 *
 * SPDX-License-Identifier: EPL-2.0
 *
 * Contributors:
 *   Red Hat, Inc. - initial API and implementation
 */

// Generated by Claude Sonnet 4.5

import React from 'react';

import { AgentStatusBadge, Props } from '@/components/AgentStatusBadge';
import getComponentRenderer, { screen } from '@/services/__mocks__/getComponentRenderer';
import { AgentStatus } from '@/services/devfileApi/devWorkspace/metadata';

const { createSnapshot, renderComponent } = getComponentRenderer(getComponent);

function getComponent(props: Props): React.ReactElement {
  return <AgentStatusBadge {...props} />;
}

describe('AgentStatusBadge', () => {
  afterEach(() => {
    jest.clearAllMocks();
  });

  describe('snapshots', () => {
    test('running status', () => {
      const snapshot = createSnapshot({
        status: 'running' as AgentStatus,
      });
      expect(snapshot.toJSON()).toMatchSnapshot();
    });

    test('finished status', () => {
      const snapshot = createSnapshot({
        status: 'finished' as AgentStatus,
      });
      expect(snapshot.toJSON()).toMatchSnapshot();
    });

    test('lost status', () => {
      const snapshot = createSnapshot({
        status: 'lost' as AgentStatus,
      });
      expect(snapshot.toJSON()).toMatchSnapshot();
    });

    test('idle status', () => {
      const snapshot = createSnapshot({
        status: 'idle' as AgentStatus,
      });
      expect(snapshot.toJSON()).toMatchSnapshot();
    });

    test('unknown status', () => {
      const snapshot = createSnapshot({
        status: undefined,
      });
      expect(snapshot.toJSON()).toMatchSnapshot();
    });
  });

  describe('status labels', () => {
    test('should display "Running" for running status', () => {
      renderComponent({
        status: 'running' as AgentStatus,
      });

      const badge = screen.getByTestId('agent-status-badge');
      expect(badge).toHaveTextContent('Running');
    });

    test('should display "Finished" for finished status', () => {
      renderComponent({
        status: 'finished' as AgentStatus,
      });

      const badge = screen.getByTestId('agent-status-badge');
      expect(badge).toHaveTextContent('Finished');
    });

    test('should display "Lost" for lost status', () => {
      renderComponent({
        status: 'lost' as AgentStatus,
      });

      const badge = screen.getByTestId('agent-status-badge');
      expect(badge).toHaveTextContent('Lost');
    });

    test('should display "Idle" for idle status', () => {
      renderComponent({
        status: 'idle' as AgentStatus,
      });

      const badge = screen.getByTestId('agent-status-badge');
      expect(badge).toHaveTextContent('Idle');
    });

    test('should display "Unknown" for undefined status', () => {
      renderComponent({
        status: undefined,
      });

      const badge = screen.getByTestId('agent-status-badge');
      expect(badge).toHaveTextContent('Unknown');
    });
  });

  describe('testid', () => {
    test('should have data-testid="agent-status-badge"', () => {
      renderComponent({
        status: 'running' as AgentStatus,
      });

      const badge = screen.getByTestId('agent-status-badge');
      expect(badge).toBeInTheDocument();
    });
  });

  describe('icon rendering', () => {
    test('should render animated InProgressIcon for running status', () => {
      const snapshot = createSnapshot({
        status: 'running' as AgentStatus,
      });
      const tree = snapshot.toJSON();
      expect(tree).toMatchSnapshot();
    });

    test('should render CheckCircleIcon for finished status', () => {
      const snapshot = createSnapshot({
        status: 'finished' as AgentStatus,
      });
      const tree = snapshot.toJSON();
      expect(tree).toMatchSnapshot();
    });

    test('should render ExclamationTriangleIcon for lost status', () => {
      const snapshot = createSnapshot({
        status: 'lost' as AgentStatus,
      });
      const tree = snapshot.toJSON();
      expect(tree).toMatchSnapshot();
    });

    test('should render OutlinedClockIcon for idle status', () => {
      const snapshot = createSnapshot({
        status: 'idle' as AgentStatus,
      });
      const tree = snapshot.toJSON();
      expect(tree).toMatchSnapshot();
    });
  });

  describe('error handling', () => {
    test('should handle unknown status value without crashing', () => {
      expect(() => {
        renderComponent({
          status: 'invalid-status' as AgentStatus,
        });
      }).not.toThrow();

      const badge = screen.getByTestId('agent-status-badge');
      expect(badge).toHaveTextContent('Unknown');
    });

    test('should handle undefined status without crashing', () => {
      expect(() => {
        renderComponent({
          status: undefined,
        });
      }).not.toThrow();

      const badge = screen.getByTestId('agent-status-badge');
      expect(badge).toBeInTheDocument();
    });
  });
});
