// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AgentStatusBadge icon rendering should render CheckCircleIcon for finished status 1`] = `
<span
  aria-label="Agent status: Finished"
  className="pf-v6-c-label pf-m-green pf-m-filled agentStatusBadge"
  data-testid="agent-status-badge"
>
  <span
    className="pf-v6-c-label__content"
  >
    <span
      className="pf-v6-c-label__icon"
    >
      <span
        className="pf-v6-c-icon pf-m-inline"
      >
        <span
          className="pf-v6-c-icon__content pf-m-success"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            className="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
            />
          </svg>
        </span>
      </span>
    </span>
    <span
      className="pf-v6-c-label__text"
    >
      Finished
    </span>
  </span>
</span>
`;

exports[`AgentStatusBadge icon rendering should render ExclamationTriangleIcon for lost status 1`] = `
<span
  aria-label="Agent status: Lost"
  className="pf-v6-c-label pf-m-orange pf-m-filled agentStatusBadge"
  data-testid="agent-status-badge"
>
  <span
    className="pf-v6-c-label__content"
  >
    <span
      className="pf-v6-c-label__icon"
    >
      <span
        className="pf-v6-c-icon pf-m-inline"
      >
        <span
          className="pf-v6-c-icon__content pf-m-warning"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            className="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </span>
      </span>
    </span>
    <span
      className="pf-v6-c-label__text"
    >
      Lost
    </span>
  </span>
</span>
`;

exports[`AgentStatusBadge icon rendering should render OutlinedClockIcon for idle status 1`] = `
<span
  aria-label="Agent status: Idle"
  className="pf-v6-c-label pf-m-filled agentStatusBadge"
  data-testid="agent-status-badge"
>
  <span
    className="pf-v6-c-label__content"
  >
    <span
      className="pf-v6-c-label__icon"
    >
      <span
        className="pf-v6-c-icon pf-m-inline"
      >
        <span
          className="pf-v6-c-icon__content pf-m-custom"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            className="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"
            />
          </svg>
        </span>
      </span>
    </span>
    <span
      className="pf-v6-c-label__text"
    >
      Idle
    </span>
  </span>
</span>
`;

exports[`AgentStatusBadge icon rendering should render animated InProgressIcon for running status 1`] = `
<span
  aria-label="Agent status: Running"
  className="pf-v6-c-label pf-m-blue pf-m-filled agentStatusBadge"
  data-testid="agent-status-badge"
>
  <span
    className="pf-v6-c-label__content"
  >
    <span
      className="pf-v6-c-label__icon"
    >
      <span
        className="pf-v6-c-icon pf-m-inline"
      >
        <span
          className="pf-v6-c-icon__content pf-m-info"
        >
          <svg
            aria-hidden={true}
            aria-label="Agent running"
            aria-labelledby={null}
            className="pf-v6-svg rotate"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M513.417211,16.013668 L513.417211,112.013668 C513.406007,120.539653 520.082422,127.576718 528.597211,128.013668 C732.697211,136.513668 896.147211,305.013668 896.147211,511.343668 C896.147211,723.013668 724.007211,895.163668 512.417211,895.163668 C437.186239,895.277345 363.602574,873.135095 300.927211,831.523668 C294.58293,827.2982 286.138663,828.135095 280.747211,833.523668 L211.807211,902.353668 C208.502935,905.676185 206.82123,910.280199 207.20607,914.950237 C207.590911,919.620275 210.00361,923.886884 213.807211,926.623668 C300.709573,989.398037 405.213535,1023.13146 512.417211,1023.01398 C794.537211,1023.01398 1023.91724,793.433668 1023.91724,511.413668 C1024.00721,235.103668 804.007211,9.22366802 529.897211,0.00645736761 C525.571205,-0.116171039 521.377128,1.51204372 518.271915,4.52681369 C515.166702,7.54158367 513.415263,11.6857144 513.417211,16.013668 M97.1272107,212.923668 C64.2190689,258.479443 39.0698895,309.162997 22.6972107,362.923668 C21.2705092,367.756559 22.2039184,372.979173 25.2163356,377.018685 C28.2287528,381.058197 32.9681443,383.442545 38.0072107,383.453683 L139.407211,383.453683 C145.970195,383.46249 151.873012,379.462528 154.297211,373.363668 C164.307669,347.593304 177.068112,322.977652 192.357211,299.943668 C196.579666,293.633658 195.741339,285.216847 190.357211,279.863668 L121.497211,211.013668 C118.186635,207.662531 113.567544,205.940538 108.871166,206.30669 C104.174788,206.672841 99.8783994,209.089927 97.1272107,212.913668 M112.907211,511.433663 L17.0072107,511.433663 C12.679257,511.433663 8.5351263,513.183159 5.52035633,516.288373 C2.50558635,519.393586 0.877371594,523.587662 1.00721065,527.913668 C4.13104542,629.408217 37.6085847,727.635936 97.1172107,809.913668 C99.8539943,813.717268 104.120603,816.129968 108.790642,816.514809 C113.46068,816.899649 118.064693,815.217944 121.387211,811.913668 L190.217211,743.073668 C195.605784,737.682216 196.442679,729.237949 192.217211,722.893668 C153.520825,664.580171 131.611534,596.745437 128.887211,526.813668 C128.553964,518.220138 121.487197,511.427209 112.887211,511.433663"
            />
          </svg>
        </span>
      </span>
    </span>
    <span
      className="pf-v6-c-label__text"
    >
      Running
    </span>
  </span>
</span>
`;

exports[`AgentStatusBadge snapshots finished status 1`] = `
<span
  aria-label="Agent status: Finished"
  className="pf-v6-c-label pf-m-green pf-m-filled agentStatusBadge"
  data-testid="agent-status-badge"
>
  <span
    className="pf-v6-c-label__content"
  >
    <span
      className="pf-v6-c-label__icon"
    >
      <span
        className="pf-v6-c-icon pf-m-inline"
      >
        <span
          className="pf-v6-c-icon__content pf-m-success"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            className="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
            />
          </svg>
        </span>
      </span>
    </span>
    <span
      className="pf-v6-c-label__text"
    >
      Finished
    </span>
  </span>
</span>
`;

exports[`AgentStatusBadge snapshots idle status 1`] = `
<span
  aria-label="Agent status: Idle"
  className="pf-v6-c-label pf-m-filled agentStatusBadge"
  data-testid="agent-status-badge"
>
  <span
    className="pf-v6-c-label__content"
  >
    <span
      className="pf-v6-c-label__icon"
    >
      <span
        className="pf-v6-c-icon pf-m-inline"
      >
        <span
          className="pf-v6-c-icon__content pf-m-custom"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            className="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"
            />
          </svg>
        </span>
      </span>
    </span>
    <span
      className="pf-v6-c-label__text"
    >
      Idle
    </span>
  </span>
</span>
`;

exports[`AgentStatusBadge snapshots lost status 1`] = `
<span
  aria-label="Agent status: Lost"
  className="pf-v6-c-label pf-m-orange pf-m-filled agentStatusBadge"
  data-testid="agent-status-badge"
>
  <span
    className="pf-v6-c-label__content"
  >
    <span
      className="pf-v6-c-label__icon"
    >
      <span
        className="pf-v6-c-icon pf-m-inline"
      >
        <span
          className="pf-v6-c-icon__content pf-m-warning"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            className="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </span>
      </span>
    </span>
    <span
      className="pf-v6-c-label__text"
    >
      Lost
    </span>
  </span>
</span>
`;

exports[`AgentStatusBadge snapshots running status 1`] = `
<span
  aria-label="Agent status: Running"
  className="pf-v6-c-label pf-m-blue pf-m-filled agentStatusBadge"
  data-testid="agent-status-badge"
>
  <span
    className="pf-v6-c-label__content"
  >
    <span
      className="pf-v6-c-label__icon"
    >
      <span
        className="pf-v6-c-icon pf-m-inline"
      >
        <span
          className="pf-v6-c-icon__content pf-m-info"
        >
          <svg
            aria-hidden={true}
            aria-label="Agent running"
            aria-labelledby={null}
            className="pf-v6-svg rotate"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M513.417211,16.013668 L513.417211,112.013668 C513.406007,120.539653 520.082422,127.576718 528.597211,128.013668 C732.697211,136.513668 896.147211,305.013668 896.147211,511.343668 C896.147211,723.013668 724.007211,895.163668 512.417211,895.163668 C437.186239,895.277345 363.602574,873.135095 300.927211,831.523668 C294.58293,827.2982 286.138663,828.135095 280.747211,833.523668 L211.807211,902.353668 C208.502935,905.676185 206.82123,910.280199 207.20607,914.950237 C207.590911,919.620275 210.00361,923.886884 213.807211,926.623668 C300.709573,989.398037 405.213535,1023.13146 512.417211,1023.01398 C794.537211,1023.01398 1023.91724,793.433668 1023.91724,511.413668 C1024.00721,235.103668 804.007211,9.22366802 529.897211,0.00645736761 C525.571205,-0.116171039 521.377128,1.51204372 518.271915,4.52681369 C515.166702,7.54158367 513.415263,11.6857144 513.417211,16.013668 M97.1272107,212.923668 C64.2190689,258.479443 39.0698895,309.162997 22.6972107,362.923668 C21.2705092,367.756559 22.2039184,372.979173 25.2163356,377.018685 C28.2287528,381.058197 32.9681443,383.442545 38.0072107,383.453683 L139.407211,383.453683 C145.970195,383.46249 151.873012,379.462528 154.297211,373.363668 C164.307669,347.593304 177.068112,322.977652 192.357211,299.943668 C196.579666,293.633658 195.741339,285.216847 190.357211,279.863668 L121.497211,211.013668 C118.186635,207.662531 113.567544,205.940538 108.871166,206.30669 C104.174788,206.672841 99.8783994,209.089927 97.1272107,212.913668 M112.907211,511.433663 L17.0072107,511.433663 C12.679257,511.433663 8.5351263,513.183159 5.52035633,516.288373 C2.50558635,519.393586 0.877371594,523.587662 1.00721065,527.913668 C4.13104542,629.408217 37.6085847,727.635936 97.1172107,809.913668 C99.8539943,813.717268 104.120603,816.129968 108.790642,816.514809 C113.46068,816.899649 118.064693,815.217944 121.387211,811.913668 L190.217211,743.073668 C195.605784,737.682216 196.442679,729.237949 192.217211,722.893668 C153.520825,664.580171 131.611534,596.745437 128.887211,526.813668 C128.553964,518.220138 121.487197,511.427209 112.887211,511.433663"
            />
          </svg>
        </span>
      </span>
    </span>
    <span
      className="pf-v6-c-label__text"
    >
      Running
    </span>
  </span>
</span>
`;

exports[`AgentStatusBadge snapshots unknown status 1`] = `
<span
  aria-label="Agent status: Unknown"
  className="pf-v6-c-label pf-m-filled agentStatusBadge"
  data-testid="agent-status-badge"
>
  <span
    className="pf-v6-c-label__content"
  >
    <span
      className="pf-v6-c-label__icon"
    >
      <span
        className="pf-v6-c-icon pf-m-inline"
      >
        <span
          className="pf-v6-c-icon__content pf-m-custom"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            className="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"
            />
          </svg>
        </span>
      </span>
    </span>
    <span
      className="pf-v6-c-label__text"
    >
      Unknown
    </span>
  </span>
</span>
`;
